--- a/src/styles/clock.css
+++ b/src/styles/clock.css
@@ -4,7 +4,7 @@
 }
 
 .clock {
-  margin: 40px 10px 10px 10px;
+  margin: 1.2rem auto;
   border-radius: 10px;
   background-color: #0d1621;
   opacity: 0.9;
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  padding: 20px 20px 5px 20px;
+  width: 88vw;
 }
 
 .calendar {
